--- a/f_PPC/FormChucnangPO.resx
+++ b/f_PPC/FormChucnangPO.resx
@@ -140,7 +140,7 @@
   <data name="btnQuanlyInvoice.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        cQAAAHEBHD+AdwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAD6SURBVDhPndLN
+        cAAAAHABznhikwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAD6SURBVDhPndLN
         SgJRGMbxk0h710Ji24S2LfQWwhYKIbnxFqyFuhZvoRTbtGpd2Ca8AMFFW+kKQnTVB4L2f97RxYGZxuaB
         H8zDmfPOcGYcmeENBZUkKWKCZ2sJc43NP6zwggwsVWjhEpU91PGBNixn0ICctf0yRS+4dC4LDShZi08a
         X7iyRlL4Qc1afE6gB55a2+YdreAyNjeY49DaNmOMEHZoOzrsLr7RgZd76LX+sobetIkDeNGBaHLiP1In
@@ -176,6 +176,16 @@
         gBmIOSBM0gFI8xIg3gjmkQhAmhcB8Q8g9gYJkAIGqWYDIFaCMLECWIB9B2I3kAA62APED4EYmyEENYOA
         ABCfBuJHQKwMEoACkvyMbghZASYMxOeB+AUQnwBivM7GBUAu6QXiFUBsBhIY7ICBAQC6NRu3ERM90AAA
         AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnSuaPO.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAHUAAAB1AePCB2UAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAAs0lEQVQ4T+WTPQoCMRQGU9hr4V9h4bk8hCiew17sxUoPo4WFqIULegFrnXEJLELWXVsHBpK3fC/h
+        kQ01aeMaM9xgDyvTxT2ecIoXtEklYviIAwsww2u+LCeGnziyADY54+q9K6F4std9oE3cW3cmST6v3cAt
+        ehPrfk/SwR06qKEFsInNDti3kOIfwy0sTlti+Ou0ZYm+qJ/CcsdxvqwfFh/GHCfoX1YrLL5pm9xwgU2s
+        SAgvpVw705IGG5MAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
